--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,8 @@
   "name": "core-selector",
   "private": true,
   "dependencies": {
-    "polymer": "Polymer/polymer#master",
-    "core-selection": "Polymer/core-selection#master"
+    "polymer": "Polymer/polymer#^0.5",
+    "core-selection": "Polymer/core-selection#^0.5"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^1.4.2"
